--- a/Notebooks/Real_Estate_Data.ipynb
+++ b/Notebooks/Real_Estate_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -427,19 +427,19 @@
        "[96809 rows x 28 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zil = pd.read_csv(r'C:\\Users\\Sahan\\Documents\\Phase_3_Project\\CSV\\zillow NY for-sale properties.csv')\n",
+    "zil = pd.read_csv(r'C:\\Users\\Sahan\\Documents\\Project_3\\CSV\\zillow NY for-sale properties.csv')\n",
     "zil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -490,28 +490,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "price\n",
        "699000.0    856\n",
        "599000.0    805\n",
        "799000.0    764\n",
        "499000.0    727\n",
        "899000.0    596\n",
        "           ... \n",
-       "99777.0       1\n",
-       "587777.0      1\n",
-       "729500.0      1\n",
-       "58300.0       1\n",
-       "239950.0      1\n",
-       "Name: count, Length: 6868, dtype: int64"
+       "569390.0      1\n",
+       "962587.0      1\n",
+       "415750.0      1\n",
+       "19.0          1\n",
+       "39950.0       1\n",
+       "Name: price, Length: 6868, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +521,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9901"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_brooklyn = (zil['city'] == 'Brooklyn').sum()\n",
+    "number_of_brooklyn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedroom_number</th>\n",
+       "      <th>bathroom_number</th>\n",
+       "      <th>price_per_unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49324</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>459999.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1008.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49328</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>758000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>421.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49332</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>849000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>463.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49335</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>788000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>525.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49338</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>550000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>361.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96739</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>1599000.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>940.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96740</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>2550000.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>850.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96741</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>965000.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>282.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96742</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>525000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>470.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96743</th>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>569000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>509.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9901 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           city state      price  bedroom_number  bathroom_number  \\\n",
+       "49324  Brooklyn    NY   459999.0             2.0              1.0   \n",
+       "49328  Brooklyn    NY   758000.0             2.0              2.0   \n",
+       "49332  Brooklyn    NY   849000.0             4.0              2.0   \n",
+       "49335  Brooklyn    NY   788000.0             4.0              3.0   \n",
+       "49338  Brooklyn    NY   550000.0             3.0              2.0   \n",
+       "...         ...   ...        ...             ...              ...   \n",
+       "96739  Brooklyn    NY  1599000.0             7.0              3.0   \n",
+       "96740  Brooklyn    NY  2550000.0            12.0              4.0   \n",
+       "96741  Brooklyn    NY   965000.0             9.0              5.0   \n",
+       "96742  Brooklyn    NY   525000.0             2.0              2.0   \n",
+       "96743  Brooklyn    NY   569000.0             2.0              2.0   \n",
+       "\n",
+       "       price_per_unit  \n",
+       "49324          1008.0  \n",
+       "49328           421.0  \n",
+       "49332           463.0  \n",
+       "49335           525.0  \n",
+       "49338           361.0  \n",
+       "...               ...  \n",
+       "96739           940.0  \n",
+       "96740           850.0  \n",
+       "96741           282.0  \n",
+       "96742           470.0  \n",
+       "96743           509.0  \n",
+       "\n",
+       "[9901 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brooklyn_df = zil[zil['city'] == 'Brooklyn'][[ 'city', 'state', 'price', 'bedroom_number', 'bathroom_number', 'price_per_unit']]\n",
+    "brooklyn_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brooklyn_df.to_csv('brooklyn_df.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +1043,7 @@
        "[96809 rows x 16 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,13 +1056,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "city\n",
        "New York            12579\n",
        "Brooklyn             9901\n",
        "Flushing             2774\n",
@@ -885,10 +1092,10 @@
        "Middletown            309\n",
        "Saratoga Springs      301\n",
        "Mount Vernon          300\n",
-       "Name: count, dtype: int64"
+       "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,13 +1107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "property_type\n",
        "SINGLE_FAMILY    42738\n",
        "CONDO            29508\n",
        "MULTI_FAMILY     11812\n",
@@ -914,10 +1120,10 @@
        "TOWNHOUSE         1792\n",
        "MANUFACTURED       842\n",
        "APARTMENT          558\n",
-       "Name: count, dtype: int64"
+       "Name: property_type, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1466,7 @@
        "[96809 rows x 16 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,13 +1477,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "city\n",
        "New York            12579\n",
        "Brooklyn             9901\n",
        "Queens               7475\n",
@@ -1307,11 +1512,11 @@
        "New Rochelle          273\n",
        "Ithaca                272\n",
        "Bronxville            267\n",
-       "Southampton           260\n",
-       "Name: count, dtype: int64"
+       "Long Beach            260\n",
+       "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1858,7 @@
        "[34382 rows x 16 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1877,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 34382 entries, 38193 to 96808\n",
+      "Int64Index: 34382 entries, 38193 to 96808\n",
       "Data columns (total 16 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
@@ -1703,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,11 +1928,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_df.to_csv('zil_2.csv', index=False)  # Change the filename as needed"
+    "filtered_df.to_csv('filtered_df.csv', index=False)  # Change the filename as needed"
    ]
   },
   {
@@ -1740,9 +1945,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_learn_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "new_learn_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1754,7 +1959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
